# labor_exchange

./: .gitignore  README.md  docker-compose.yaml  requirements.txt
src/: .pre-commit-config.yaml  alembic.ini  db_settings.py  env.example  main.py  pyproject.toml
src/abstracts/: domain.py  repository.py  unit_of_work.py
src/alchemy_orm_migrations/: env.py
src/config/: app_config.py  keycloak_config.py  logger_config.py  pg_config.py  uvicorn_config.py
src/dependencies/: job.py
src/domain/job/: job.py
src/dto/: __init__.py  job.py  response.py  user.py
src/entrypoints/: __init__.py  auth.py  job.py  main.py  response.py  router_registrator.py  user.py
src/fixtures/: jobs.py  responses.py  users.py
src/interfaces/: base_alchemy_model.py  base_enum.py  base_repository.py  base_uow.py
src/migrations/: env.py
src/models/: __init__.py  jobs.py  responses.py  users.py
src/queries/: job.py  response.py
src/repositories/: alchemy_connection_proxy.py  http_connection_proxy.py  http_repository.py
src/repository/: __init__.py  job_repository.py  user_repository.py
src/routers/: job.py  response.py  user.py
src/schemas/: jobs.py  responses.py  user.py
src/service/: auth.py  job.py  response.py  user.py
src/services/: auth_service.py  jobs_service.py  responses_service.py  users_service.py
src/tests/: test_jobs.py  test_responses.py  test_users.py
src/tools/: const.py  enums.py  exceptions.py  globals.py
src/unit_of_work/: __init__.py  alchemy_orm_unit_of_work.py
src/uows/: alchemy_uow.py  http_uow.py
src/web/: app_initializer.py
(+57 files in other folders)
