[tool.poetry]
name = "exchange"
version = "0.1.0"
description = ""
authors = ["gpn_team"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.0"
dependency-injector = "^4.41.0"
pre-commit = "^4.0.1"
python-json-logger = "^2.0.7"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
httpx = "^0.28.1"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
psycopg2-binary = "^2.9.10"
